[gd_scene load_steps=4 format=3 uid="uid://17g7pv7facxf"]

[ext_resource type="Script" path="res://addons/graph/cable.gd" id="1_q2oh2"]

[sub_resource type="Gradient" id="Gradient_pbkhi"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ni0vf"]
gradient = SubResource("Gradient_pbkhi")

[node name="PDCable" type="Area2D"]
z_index = 6
collision_layer = 2
collision_mask = 0
script = ExtResource("1_q2oh2")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0
texture = SubResource("GradientTexture2D_ni0vf")
texture_mode = 1
antialiased = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[connection signal="area_entered" from="." to="." method="_area_entered"]
[connection signal="area_exited" from="." to="." method="_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_visibility_changed"]
